--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,8 @@ loguru==0.7.3
 markdown-it-py==4.0.0
 matplotlib==3.10.5
 mccabe==0.7.0
-mcp==1.2.0
+mcp==1.14.0
+fastmcp>=2.10.0,<2.13.0
 mdurl==0.1.2
 multidict==6.6.4
 mypy==1.14.1
@@ -52,9 +53,9 @@ prawcore==2.4.0
 propcache==0.3.2
 pyaml==24.12.1
 pycodestyle==2.12.1
-pydantic==2.10.4
+pydantic>=2.11.0,<3.0.0
 pydantic-settings==2.7.0
-pydantic_core==2.27.2
+pydantic_core>=2.33.0
 pyflakes==3.2.0
 Pygments==2.19.2
 pyparsing==3.2.3
@@ -63,12 +64,12 @@ pytest-asyncio==0.25.2
 pytest-cov==6.0.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv>=1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 rauth==0.7.3
 regex==2025.7.34
-requests==2.32.3
+requests==2.32.5
 requests-oauthlib==2.0.0
 rich==14.1.0
 ruamel.yaml==0.18.6
@@ -95,6 +96,6 @@ update-checker==0.18.0
 urllib3==2.5.0
 uvicorn==0.35.0
 websocket-client==1.8.0
-yahoo-oauth==2.1.0
+yahoo-oauth==2.1.1
 yarl==1.20.1
-yfpy==16.0.3
+yfpy==17.0.0
